--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -117,22 +117,24 @@
   row-gap: 16px;
 
   &__name {
+    font-family: "Roboto", sans-serif;
     background-color: #f7f8ff;
     border: 1px solid #fff;
     border-radius: 8px;
     height: 48px;
     color: #8f99a8;
-    padding-left: 15px;
+    padding-left: 17px;
     outline: none;
   }
 
   &__email {
+    font-family: "Roboto", sans-serif;
     background-color: #f7f8ff;
     border: 1px solid #fff;
     border-radius: 8px;
     height: 48px;
     color: #8f99a8;
-    padding-left: 15px;
+    padding-left: 17px;
     outline: none;
   }
 
@@ -153,20 +155,20 @@
 
   &__button {
     background-color: blue;
-    border: 1px solid #fff;
+    box-shadow: 0 6px 23px 0 #0075ff75;
+    border: 1px solid blue;
     border-radius: 8px;
     font-size: 16px;
     font-weight: 700;
     height: 56px;
     color: #fff;
     margin-bottom: 64px;
-    transition: color 0.2s ease,
+    transition: box-shadow 0.2s ease,
       background-color 0.2s ease;
 
     &:hover {
-      background-color: white;
-      border: 1px solid blue;
-      color: blue;
+      background-color: #005ecc;
+      box-shadow: 0 13px 27px 0 #0053b575;
     }
   }
 }
