--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -119,22 +119,22 @@
   &__name {
     font-family: "Roboto", sans-serif;
     background-color: #f7f8ff;
-    border: 1px solid #fff;
+    border: 2px solid #fff;
     border-radius: 8px;
     height: 48px;
     color: #8f99a8;
-    padding-left: 17px;
+    padding: 0 17px;
     outline: none;
   }
 
   &__email {
     font-family: "Roboto", sans-serif;
     background-color: #f7f8ff;
-    border: 1px solid #fff;
+    border: 2px solid #fff;
     border-radius: 8px;
     height: 48px;
     color: #8f99a8;
-    padding-left: 17px;
+    padding: 0 17px;
     outline: none;
   }
 
@@ -146,9 +146,10 @@
     outline: none;
     font-size: 14px;
     font-weight: 400;
+    line-height: 20px;
     color: #8f99a8;
     height: 144px;
-    padding-left: 17px;
+    padding: 14px 17px;
     margin-bottom: 16px;
     resize: none;
   }
@@ -180,6 +181,16 @@
     &__wrapper {
       grid-template-columns: 1fr;
     }
+  }
+}
+
+.action {
+  &:hover {
+    border: 2px solid #ccd0e0;
+  }
+
+  &:focus {
+    border: 2px solid #0075ff;
   }
 }
 
